--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.1",
     "request": "^2.88.2",
     "styled-components": "^5.3.6",
+    "tw-elements": "^1.0.0-alpha13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
