--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http:/amadinahmed.github.io/mern-minor",
   "name": "server",
   "version": "1.0.0",
   "description": "",
@@ -6,6 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
+    "predepoly":"npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "nodemon server"
   },
   "keywords": [],
@@ -17,6 +20,7 @@
     "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "nodemon": "^2.0.20"
   }
 }
